Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3088,10 +3088,10 @@ input, select, textarea {
 		/* Main */
 
 			#main {
-				margin-left: 30%;
+				margin-left: 35%;
 				max-width: none;
 				padding: 6em 3em 3em 3em;
-				width: calc(100% - 30%);
+				width: calc(100% - 35%);
 			}
 
 	}
